--- a/.github/workflows/action-result.yml
+++ b/.github/workflows/action-result.yml
@@ -29,6 +29,7 @@ jobs:
           pip install --upgrade google-api-python-client oauth2client
           pip install playwright
           python -m playwright install ${{ matrix.browser-channel }} --with-deps
+          pip install pyTelegramBotAPI
 
       - name: Install ubuntu package
         run: |
